@@ -209,7 +209,7 @@
 #include "branch_empty.h"
 
 #if WITH_JSON
-#include "reader_ndec.h"
+#include "reader_jdec.h"
 #endif
 
 #include "cons_origbranch.h"
@@ -479,7 +479,7 @@ SCIP_RETCODE SCIPincludeGcgPlugins(
    SCIP_CALL( GCGincludeReaderDec(scip) );
    SCIP_CALL( SCIPincludeReaderRef(scip) );
 #if WITH_JSON
-   SCIP_CALL( SCIPincludeReaderNDec(scip) );
+   SCIP_CALL( SCIPincludeReaderJDec(scip) );
 #endif
    SCIP_CALL( SCIPincludeBranchruleEmpty(scip) );
 
